--- a/.render.yaml
+++ b/.render.yaml
@@ -4,11 +4,19 @@ services:
     env: node
     plan: free
     buildCommand: npm install
-    startCommand: npm start
+    startCommand: node server.js
     envVars:
-      - key: TWILIO_SID
-        value: your_twilio_account_sid
-      - key: TWILIO_AUTH
-        value: your_twilio_auth_token
-      - key: TWILIO_PHONE
-        value: +1415XXXXXXX
+      - key: DB_HOST
+        value: your-database-host
+      - key: DB_USER
+        value: your-database-username
+      - key: DB_PASS
+        value: your-database-password
+      - key: DB_NAME
+        value: your-database-name
+      - key: TWILIO_ACCOUNT_SID
+        value: your-twilio-account-sid
+      - key: TWILIO_AUTH_TOKEN
+        value: your-twilio-auth-token
+      - key: TWILIO_PHONE_NUMBER
+        value: your-twilio-phone-number
